--- a/templates/base/buttons/button.confirm.latte
+++ b/templates/base/buttons/button.confirm.latte
@@ -1,6 +1,6 @@
-<button class="confirm-button btn btn-neutral btn-square join-item"
+<button class="btn btn-primary btn-square join-item"
         type="submit"
-        name="submit" value="{$value}"
+        name="submit" value="{$value}" title="{$title}"
         {if isset($form_action)}formaction="{$form_action}"{/if}>
     {icon("feather/check.svg")|noescape}
 </button>
