--- a/templates/base/buttons/button.link.latte
+++ b/templates/base/buttons/button.link.latte
@@ -1,4 +1,3 @@
-<a href="{$url}" aria-label="{$label}"
-   title="{$label}">
+<a href="{$url}" aria-label="{$label}" title="{$label}">
     {$text} {!isset($icon) ?: icon($icon)|noescape}
 </a>
