--- a/templates/base/include/header.latte
+++ b/templates/base/include/header.latte
@@ -6,16 +6,16 @@
             </a>
         </div>
         <div class="flex gap-x-4 px-2">
-            {if isset($_SESSION['plugin_actives']) && in_array("DarkMode", $_SESSION['plugin_actives'])}
-                {\Ivy\View\LatteView::render(Path::get('PLUGIN_PATH') . "darkmode/template/buttons.latte")}
+            {if isPluginActive('DarkMode')}
+                {render(Path::get('PLUGIN_PATH') . "darkmode/template/buttons.latte")}
             {/if}
-            {if isLoggedIn()}
+            {if auth()->isLoggedIn()}
                 <div class="dropdown dropdown-end">
                     <div tabindex="0" role="button" class="avatar">
-                        {if \Ivy\Model\Profile::hasCurrentUserImage()}
+                        {if profile()->user_image}
                             <div class="w-10 rounded-full">
-                                <img alt="{\Ivy\Model\Profile::getCurrentUserName()}"
-                                     src="{path('BASE_PATH') . path('MEDIA_PATH') . 'profile/' . \Ivy\Model\Profile::getCurrentUserImage()}"/>
+                                <img alt="{profile()->username}"
+                                     src="{path('BASE_PATH') . path('MEDIA_PATH') . 'profile/' . profile()->user_image}"/>
                             </div>
                         {else}
                             {icon("feather/user.svg")|noescape}
@@ -29,7 +29,7 @@
                                 {text('menu.profile')}
                             </a>
                         </li>
-                        {if \Ivy\Model\User::canEditAsAdmin()}
+                        {if canEditAsAdmin()}
                             <li>
                                 <a href="{path('BASE_PATH') . 'admin/setting'}">
                                     {icon("feather/sliders.svg")|noescape}
@@ -54,7 +54,7 @@
                                     {text('menu.users')}
                                 </a>
                             </li>
-                            {if isset($_SESSION['plugin_actives']) && in_array("Tag", $_SESSION['plugin_actives'])}
+                            {if isPluginActive('Tag')}
                                 <li>
                                     <a href="{path('BASE_PATH') . 'plugin/tag/manage'}">
                                         {icon("feather/tag.svg")|noescape}
