--- a/plugins/items/collection/text/template/item.latte
+++ b/plugins/items/collection/text/template/item.latte
@@ -9,6 +9,6 @@
             </div>
         </form>
     {else}
-        <p>{* $text->text|noescape *}</p>
+        <p>{$text->text|noescape}</p>
     {/if}
 </div>
