Update plugin items

--- a/plugins/items/collection/text/template/input.TypeText.latte
+++ b/plugins/items/collection/text/template/input.TypeText.latte
@@ -8,6 +8,6 @@
 
 <script>
     window.addEventListener('DOMContentLoaded', () => {
-        // inputTextListener({$id});
+        inputTextListener({$id});
     });
 </script>
