--- a/plugins/items/template/item_admin_buttons.latte
+++ b/plugins/items/template/item_admin_buttons.latte
@@ -1,5 +1,5 @@
 <div n:if="$item" class="dissableSortable join">
-        {button type:visible, name:'publish_item', value:$item->published, id:$item->id}
-        {button type:save, name:'save_item', id:$item->id}
-        {button type:delete, name:'delete_item', value:'', id:$item->id, placeholder:$item->name}
+        {button type:visible, name:'publish', value:$item->published, id:$item->id}
+        {button type:save, name:'save', id:$item->id}
+        {button type:delete, name:'delete', value:'', id:$item->id, placeholder:$item->name}
 </div>
