--- a/plugins/items/collection/audio/template/item.latte
+++ b/plugins/items/collection/audio/template/item.latte
@@ -1,4 +1,4 @@
-<div class="item item-audio col-12 {if !$item->parent}col-6-md col-4-lg{/if}" id="item-{$item->id}">
+<div class="item item-audio {if !$item->parent}{/if}" id="item-{$item->id}">
 
     {define item}
         <div class="relative">
@@ -10,6 +10,7 @@
                     </div>
                 {/if}
             {else}
+                ----
                 <label n:if="!isset($audio->file)" for="upload_audio_{$item->id}"
                                                    class="block border border-dashed bg-gray-50 cursor-pointer min-h-10">
                     <input type="file" id="upload_audio_{$item->id}" class="hidden"
