--- a/plugins/items/collection/image/template/input.TypeImage.latte
+++ b/plugins/items/collection/image/template/input.TypeImage.latte
@@ -1,26 +1,22 @@
-{if !empty($inputImage['value'])}
-
-    <input type="hidden" name="{$inputImage['name']}" value="{$inputImage['value']}">
-
+{if !empty($file)}
     <picture class="block h-auto w-full">
         <source media="(min-width:1024px)"
-                srcset="{= DIRECTORY_SEPARATOR . Path::get('SUBFOLDER')}media/item/large/{= $image_name . '.webp'} 1x, {= DIRECTORY_SEPARATOR . Path::get('SUBFOLDER')}media/item/large/{= $image_name . '.webp'} 2x"
+                srcset="/{path('SUBFOLDER')}media/item/large/{pathinfo($file, PATHINFO_FILENAME) . '.webp'} 1x, /{path('SUBFOLDER')}media/item/large/{pathinfo($file, PATHINFO_FILENAME) . '.webp'} 2x"
                 type="image/webp">
         <source media="(min-width:1024px)"
-                srcset="{= DIRECTORY_SEPARATOR . Path::get('SUBFOLDER')}media/item/large/{= $inputImage['value']} 1x, {= DIRECTORY_SEPARATOR . Path::get('SUBFOLDER')}media/item/large/{= $inputImage['value']} 2x">
+                srcset="/{path('SUBFOLDER')}media/item/large/{$file} 1x, /{path('SUBFOLDER')}media/item/large/{$file} 2x">
         <source media="(min-width:660px)"
-                srcset="{= DIRECTORY_SEPARATOR . Path::get('SUBFOLDER')}media/item/small/{= $image_name . '.webp'} 1x, {= DIRECTORY_SEPARATOR . Path::get('SUBFOLDER')}media/item/large/{= $image_name . '.webp'} 2x"
+                srcset="/{path('SUBFOLDER')}media/item/small/{pathinfo($file, PATHINFO_FILENAME) . '.webp'} 1x, /{path('SUBFOLDER')}media/item/large/{pathinfo($file, PATHINFO_FILENAME) . '.webp'} 2x"
                 type="image/webp">
         <source media="(min-width:660px)"
-                srcset="{= DIRECTORY_SEPARATOR . Path::get('SUBFOLDER')}media/item/small/{= $inputImage['value']} 1x, {= DIRECTORY_SEPARATOR . Path::get('SUBFOLDER')}media/item/large/{= $inputImage['value']} 2x">
+                srcset="/{path('SUBFOLDER')}media/item/small/{$file} 1x, /{path('SUBFOLDER')}media/item/large/{$file} 2x">
         <source media="(min-width:320px)"
-                srcset="{= DIRECTORY_SEPARATOR . Path::get('SUBFOLDER')}media/item/thumb/{= $image_name . '.webp'} 1x, {= DIRECTORY_SEPARATOR . Path::get('SUBFOLDER')}media/item/small/{= $image_name . '.webp'} 2x"
+                srcset="/{path('SUBFOLDER')}media/item/thumb/{pathinfo($file, PATHINFO_FILENAME) . '.webp'} 1x, /{path('SUBFOLDER')}media/item/small/{pathinfo($file, PATHINFO_FILENAME) . '.webp'} 2x"
                 type="image/webp">
         <source media="(min-width:320px)"
-                srcset="{= DIRECTORY_SEPARATOR . Path::get('SUBFOLDER')}media/item/thumb/{= $inputImage['value']} 1x, {= DIRECTORY_SEPARATOR . Path::get('SUBFOLDER')}media/item/small/{= $inputImage['value']} 2x">
+                srcset="/{path('SUBFOLDER')}media/item/thumb/{$file} 1x, /{path('SUBFOLDER')}media/item/small/{$file} 2x">
         <img class="block h-auto w-full max-w-full"
-             src="{= DIRECTORY_SEPARATOR . Path::get('SUBFOLDER')}media/item/thumb/{= $inputImage['value']}" {$image_info|noescape}
+             src="/{path('SUBFOLDER')}media/item/thumb/{$file}"
              alt="" loading="lazy">
     </picture>
-
 {/if}
