--- a/plugins/items/collection/image/template/item.latte
+++ b/plugins/items/collection/image/template/item.latte
@@ -1,39 +1,37 @@
-<div class="item item-image col-12 {if !$item->parent}col-6-md col-4-lg{/if}" id="item-{$item->id}">
+<div class="item item-image {if !$item->parent_id}{/if}" id="item-{$item->id}">
 
     {define item}
         <div class="relative">
-
             {if $image->file}
-                {\Image\Image::set('image', $image->file)}
-                {if isLoggedIn() && $item->author}
-                    <div class="absolute top-1/2 left-1/2 -mt-5 -ml-5">
-                        {\Ivy\Button::delete('delete_image', 'single_image_' . $item->id, 'delete_image_' . $item->id)}
-                    </div>
-                {/if}
-            {else}
-                <label for="upload_image_{$item->id}"
-                       class="block border border-dashed bg-gray-50 cursor-pointer min-h-72">
-                    <input type="file" id="upload_image_{$item->id}" class="hidden" name="upload_image"
-                           accept="image/*">
-                    <img class="text-center" id="upload_image_{$item->id}Preview" src="#" alt="upload image"/>
-                    <script>
-                        window.addEventListener('DOMContentLoaded', () => {
-                            previewImage("upload_image_" + {$item->id}, "upload_image_" + {$item->id} +"Preview", "src");
-                        });
-                    </script>
-                </label>
+                {render(path('PLUGIN_PATH') . 'items/collection/image/template/input.TypeImage.latte', ['id' => $image->id, 'name' => 'image', 'file' => $image->file])}
             {/if}
-
         </div>
     {/define}
 
-    {if isLoggedIn() && $item->author}
-        <form action="{= Path::get('BASE_PATH') . 'image/update/' . $item->id . \Ivy\Template::$url}" method="POST"
-              enctype="multipart/form-data">
+    {if auth()->isLoggedIn()}
+        <form action="{path('BASE_PATH') . 'image/save/' . $item->id}" method="POST" enctype="multipart/form-data">
+            {csrf()}
             <div class="relative group">
                 {include item}
-                <div class="hidden group-hover:block absolute z-10 inset-x-0 -bottom-6 text-center">
-                    {\Ivy\Template::render('include/item_admin_buttons.latte', ['item' => $item])}
+                {if $image->file}
+                    <div class="absolute top-1/2 left-1/2 -mt-5 -ml-5">
+                        {button type:delete, name:'remove', value:'remove_image_' . $item->id, id:$item->id, placeholder:$image->file}
+                    </div>
+                {else}
+                    <div class="block relative bg-base-200 min-h-72">
+                        <img class="text-center text-xs" id="upload_image_{$item->id}Preview" src="#" alt="preview image"/>
+                        <div class="absolute top-1/2 left-1/2 -mt-5 -ml-5">
+                            {button type:upload, name:'image', id:'upload_image_' . $item->id}
+                        </div>
+                        <script>
+                            window.addEventListener('DOMContentLoaded', () => {
+                                previewImage("upload_image_" + {$item->id}, "upload_image_" + {$item->id} +"Preview", "src");
+                            });
+                        </script>
+                    </div>
+                {/if}
+                <div class="hidden group-hover:block absolute left-0 bottom-0">
+                    {render(path('PLUGIN_PATH') . 'items/template/item_admin_buttons.latte', ['item' => $item])}
                 </div>
             </div>
         </form>
