Update items plugin

--- a/plugins/items/collection/audio/template/input.TypeAudio.latte
+++ b/plugins/items/collection/audio/template/input.TypeAudio.latte
@@ -1,4 +1,4 @@
 <audio controls>
-    <source src="{= $inputAudio['value']}" type="audio/mpeg">
+    <source src="{path('BASE_PATH') . path('MEDIA_PATH') . 'item/audio/' . $file}" type="audio/mpeg">
     Your browser does not support the audio tag.
 </audio>
