--- a/templates/base/buttons/button.delete.latte
+++ b/templates/base/buttons/button.delete.latte
@@ -1,11 +1,11 @@
-    <input type="checkbox" id="modal_delete_{$id}" class="modal-toggle block" name="{$name}" value="{$value}"/>
+    <input type="checkbox" id="modal_{$name}_{$id}" class="modal-toggle block" name="{$name}" value="{$value}"/>
     <div n:if="$id" class="modal text-left" role="dialog">
         <div class="modal-box">
-            <label class="btn btn-sm btn-circle btn-ghost absolute right-2 top-2" for="modal_delete_{$id}">✕</label>
+            <label class="btn btn-sm btn-circle btn-ghost absolute right-2 top-2" for="modal_{$name}_{$id}">✕</label>
             <h3 class="text-lg font-bold">{text('modal.delete')}</h3>
             <p class="py-4">{text('modal.delete_question', ['placeholder' => $placeholder ?? $id])}</p>
             <div class="modal-action">
-                <label for="modal_delete_{$id}" class="btn">{text('button.cancel')}</label>
+                <label for="modal_{$name}_{$id}" class="btn">{text('button.cancel')}</label>
                 <button class="btn btn-primary"
                         name="submit" type="submit" value="delete">{text('button.delete')}
                 </button>
@@ -13,6 +13,6 @@
         </div>
     </div>
 
-    <label class="btn btn-neutral btn-square join-item" title="{text('button.delete') . ' ' . ($placeholder ?? $id)}" for="modal_delete_{$id}">
+    <label class="btn btn-neutral btn-square join-item" title="{text('button.delete') . ' ' . ($placeholder ?? $id)}" for="modal_{$name}_{$id}">
         {icon("feather/trash-2.svg")|noescape}
     </label>
