--- a/plugins/items/collection/article/template/item.latte
+++ b/plugins/items/collection/article/template/item.latte
@@ -1,14 +1,14 @@
-<div class="item item-article col-12 col-6-md col-4-lg relative group" id="item-{$item->id}">
+<div class="item item-article relative group" id="item-{$item->id}">
 
-    <a href="{= Path::get('BASE_PATH') . 'article/' . $item->slug}" class="card bg-base-100 border">
+    <a href="{path('BASE_PATH') . 'article/' . $item->slug}" class="card bg-base-100 border">
         <figure>
-            {if !empty($article->image)}
-                {\Image\Image::set('image', $article->image)}
+            {if $article->image}
+                {* \Image\Image::set('image', $article->image) *}
             {/if}
         </figure>
         <div class="card-body">
             <div class="card-actions">
-                <div class="tag">{$tag->value}</div>
+                <div class="tag">{* $tag->value *}</div>
             </div>
             <h2 class="text-3xl font-bold leading-none">
                 {$article->title}
@@ -16,17 +16,17 @@
             <h3 class="text-3xl font-normal leading-none">
                 {$article->subtitle}
             </h3>
-            {\Ivy\Template::view('include/author.latte', ['author' => $author])}
+            {* render('include/author.latte', ['author' => $author]) *}
         </div>
     </a>
 
-    {if auth()->isLoggedIn() && $item->author}
-        <form class="hidden group-hover:block absolute z-10 inset-x-0 -bottom-6 text-center"
-              action="{= Path::get('BASE_PATH') . 'article/update/' . $item->id}"
-              method="POST"
-              enctype="multipart/form-data">
-            {render('include/item_admin_buttons.latte', ['item' => $item])}
-        </form>
+    {if auth()->isLoggedIn()}
+        <div class="hidden group-hover:block absolute left-0 bottom-0">
+            <form action="{path('BASE_PATH') . 'article/save/' . $item->id}" method="POST" enctype="multipart/form-data">
+                {csrf()}
+                {render(path('PLUGIN_PATH') . 'items/template/item_admin_buttons.latte', ['item' => $item])}
+            </form>
+        </div>
     {/if}
 
 </div>
